--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
   "devDependencies": {
     "browser-sync": "^2.26.13",
     "run-script-os": "^1.1.5"
+  },
+  "dependencies": {
+    "axios": "^0.27.2",
+    "debug": "^4.3.4",
+    "fsevents": "^2.3.2"
   }
 }
